# digital-toy

./: Got-better-C  HOWTO.md  Make-it-Better  PicsGallery.md  ProjectHome.md  README  README.md  ditigtal-toy-interface-std
3x3-scankeyboard/: Preview keyboard.PPC  keyboard.Pcb
51-zeroF/: eagle.epf
8x8-led-matrix/: 8x8ledmatrix.Pcb  8x8ledmatrix.Sch  Preview 8x8ledmatrix.PPC
E-calculator/: LED_resistor.htm  push-pull-switch-power-design.html
Lead-Acid-protection/: eagle.epf  m-power-v0.b#1  m-power-v0.sch
Li-Ion-6F22/: eagle.epf  m-power-v0.pro  m-power-v0.s#1
PCB-basic/: digital-toy.l#7  digital-toy.l#8  digital-toy.lbr
PWM-const-current/: PWM-DA-模拟结果.txt  PWM-const-current.ddb  pmw-cc.Sch  pwm-cc.ms10 (Security copy)
URFTB/: control-board-interface
dtoy-eagle-lbr/: EAGLE-5.7.0.lnk  SparkFun.lbr  digital-toy.l#1  digital-toy.l#2  digital-toy.l#5  digital-toy.l#6  digital-toy.l#7  digital-toy.l#8  digital-toy.lbr  dtoy-RF.lbr  install  led-seg.lbr  yhf_spec-RF.lbr
e-basic/: MMIC-BJT-amp-gain-common-base.asc
e-calculator/: biasng.htm  colpitts.sch  rf-calc.htm
e-kits/: e-kits-better
first-pcb-7805/: Preview to5v.PPC  to5v.Pcb  to5v.Sch  to5v.ddb
i-charger/: adc-test-1uf.10k.pull-up.1k  current-smaple-amplifier.ms10  pwm-ouravr-charger.ms10  pwm-ouravr-charger.ms10 (Security copy)
ideas-now/: mini-sch-collection.sch
m-power/: eagle.epf
metal-X51Sys/: 51z-firmware  51z-firmware.M51  51z-firmware.lnp  51z-firmware.plg  config.h  main.c  (+1 more)
trunk/rf_db/: README  setup.cfg  smoke_.sh
trunk/rf_db/regen/sqlalchemy/migrate_repo/: migrate.cfg
(+2105 files in other folders)
