[metadata]
name = regen
version = 2013.7
summary = Every thing for RF hobbyist
description-file =
    README
author = Yongli He
author-email = heyongli@gmail.com
classifier =
    Environment :: Digital Toy
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    regen

[hooks]
setup-hooks =
    pbr.hooks.setup_hook


